# polish-word-embeddings-review

./: LICENSE  Pipfile  README.md  pyproject.toml
src/evaluation/: __main__.py  word_analogy.py
