[tool.poetry]
name = "polish-word-embeddings-review"
version = "1.0.1"
description = "Evaluation of polish word embeddings prepared by various research groups."
authors = ["Juliusz Lewalski <jlewalski@ermlab.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gensim = "^3.8.3"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
